--- a/index.css
+++ b/index.css
@@ -5,6 +5,15 @@
     margin: 0px;
 }
 
+body {
+    margin: 10px;
+}
+
+button {
+    padding: 5px;
+    margin: 5px;
+}
+
 /* CANCEL ICON */
 .material-symbols-outlined {
     color: red;
@@ -35,21 +44,40 @@
     display: flex;
     flex-direction: column;
     min-width: 200px;
-
+    padding-right: 25px;
+}
+.controls-container>label{
+    margin-top: 5px;
+}
+.controls-container>input, .controls-container>select, .controls-container>#flex-basis-div>input {
+    text-align: right;
 }
 .flex-container {
-    display: flex;;
+    border: 3px solid red;
+    display: flex;
     flex-grow: 1;
 }
 .item {
-    border: 1px solid black;
+    border: 2px solid black;
     position: relative;
-    height: 300px;
-    flex: 1;
+    min-height: 100px;
+    min-width: 100px;
+    flex: 0 1 100px;
 }
 .flex-content {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 5px;
+}
+
+.px-div-container{
+    position: relative;
+}
+.px-div {
+    position: absolute;
+    right: 0;
+    top: 0;
 }
